Updated the matching routine so that names are now matched based on the levenshtein ratio and added a more suffisticated date matching routine

--- a/Automatic Matching Examples.ipynb
+++ b/Automatic Matching Examples.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import HTML, display\n",
-    "from automatic_matching import get_matching_score, get_results_as_html"
+    "from automatic_matching import get_matching_score, get_results_as_html, match_date_against_local_date"
    ]
   },
   {
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3ba4b26c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h1>Total Score: <b style=\"padding:4px; color: white; border-radius:4px;background-color: green;\">66.42211838006232</b> Automatically matched</h1><p>Minimum score for automatching: 66</p><h2>Forename:</h2><p>Score: <b>24.922118380062305 of 25<b></p><p>Mean Levenshtein distance: <b>0.5 (0.5)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein distance</th></tr><tr><td>{'original': 'Anne', 'normalized': 'ane'}</td><td>{'original': 'Anne', 'normalized': 'ane'}</td><td>0 (0)</td></tr><tr><td>{'original': 'Anna', 'normalized': 'ana'}</td><td>{'original': 'Anne', 'normalized': 'ane'}</td><td>1 (1)</td></tr><tr><td>{'original': 'Anneliese', 'normalized': 'aneliese'}</td><td>{'original': 'Annelies', 'normalized': 'anelies'}</td><td>1 (1)</td></tr><tr><td>{'original': 'Anne', 'normalized': 'ane'}</td><td>{'original': 'Annelies', 'normalized': 'anelies'}</td><td>4 (4)</td></tr><tr><td>{'original': 'Anna', 'normalized': 'ana'}</td><td>{'original': 'Annelies', 'normalized': 'anelies'}</td><td>5 (5)</td></tr></table><h2>Surname:</h2><p>Score: <b>25.0 of 25<b></p><p>Mean Levenshtein distance: <b>0.0 (2.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein distance</th></tr><tr><td>{'original': 'Musterfrau', 'normalized': 'musterfrau'}</td><td>{'original': 'Musterphrau', 'normalized': 'musterfrau'}</td><td>0 (2)</td></tr></table><h2>Date of birth:</h2><p>Score: <b>1.5 of 15<b></p><p>Levenshtein distance: <b>3<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein distance</th></tr><tr><td>02.03.1923</td><td>12.12.1923</td><td>3</td></tr></table><h2>Place of birth:</h2><p>Score: <b>15 of 15<b></p><p>Mean Levenshtein distance: <b>3.5 (3.5)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein distance</th></tr><tr><td>{'original': 'München', 'normalized': 'munchen'}</td><td>{'original': 'München', 'normalized': 'munchen'}</td><td>0 (0)</td></tr><tr><td>{'original': 'München', 'normalized': 'munchen'}</td><td>{'original': 'Bavaria', 'normalized': 'bavaria'}</td><td>7 (7)</td></tr></table>"
+       "<h1>Total Score: <b style=\"padding:4px; color: white; border-radius:4px;background-color: green;\">68.0625</b> Automatically matched</h1><p>Minimum score for automatching: 60</p><h2>Forename:</h2><p>Score: <b>25.0 of 25<b></p><p>Mean Levenshtein ratio: <b>1.0 (0.9473684210526316)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Margarethe', 'normalized': 'margarete'}</td><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>1.0 (0.9473684210526316)</td></tr></table><h2>Surname:</h2><p>Score: <b>14.0625 of 25<b></p><p>Mean Levenshtein ratio: <b>0.75 (0.8888888888888888)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.75 (0.8888888888888888)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.19999999999999996 (0.18181818181818177)</td></tr></table><h2>Date of birth:</h2><p>Score: <b>19.0 of 20<b></p><p>Levenshtein distance: <b>2<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>02.03.1923</td><td>02.03.1932</td><td>2</td></tr></table><h2>Place of birth:</h2><p>Score: <b>10.0 of 10<b></p><p>Mean Levenshtein ratio: <b>1.0 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'München', 'normalized': 'munchen'}</td><td>{'original': 'München', 'normalized': 'munchen'}</td><td>1.0 (1.0)</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -72,8 +72,8 @@
     "\n",
     "\n",
     "local_test_data = {\n",
-    "    'forenames': 'Anna, Anne Anneliese',\n",
-    "    'surnames': 'Musterfrau',\n",
+    "    'forenames': 'Margarethe, Margarete',\n",
+    "    'surnames': 'Abeles, Lewy',\n",
     "    'birth_place': 'München',\n",
     "    'birth_date': '02.03.1923',\n",
     "    'death_place': 'Dachau',\n",
@@ -81,15 +81,63 @@
     "}\n",
     "\n",
     "external_test_data = {\n",
-    "    'forenames': 'Anne Annelies',\n",
-    "    'surnames': 'Musterphrau',\n",
+    "    'forenames': 'Margarete',\n",
+    "    'surnames': 'Loewy',\n",
     "    'birth_place': 'München / Bavaria',\n",
-    "    'birth_date': '12.12.1923',\n",
-    "#    'death_place': 'Dachau',\n",
-    "#    'death_date': '11.11.1941',\n",
+    "    'birth_date': '02.03.1932',\n",
+    "   #'death_place': 'Dachau',\n",
+    "   # 'death_date': '11.11.1941',\n",
     "}\n",
     "\n",
     "result = get_matching_score(local_test_data, external_test_data)\n",
+    "\n",
+    "output_html = get_results_as_html(result)\n",
+    "\n",
+    "display(HTML(output_html))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e1cae111-07a9-4abe-8b64-faff30188b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<h1>Total Score: <b style=\"padding:4px; color: white; border-radius:4px;background-color: red;\">35.991956360946745</b></h1><p>Minimum score for automatching: 60</p><h2>Forename:</h2><p>Score: <b>25.0 of 25<b></p><p>Mean Levenshtein ratio: <b>1.0 (0.9473684210526316)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Margarethe', 'normalized': 'margarete'}</td><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>1.0 (0.9473684210526316)</td></tr></table><h2>Surname:</h2><p>Score: <b>6.991956360946745 of 25<b></p><p>Mean Levenshtein ratio: <b>0.5288461538461539 (0.6444444444444444)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.75 (0.8888888888888888)</td></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>0.36363636363636365 (0.15384615384615385)</td></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>0.36363636363636365 (0.16666666666666663)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>0.3076923076923077 (0.4)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>0.3076923076923077 (0.2857142857142857)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.19999999999999996 (0.18181818181818177)</td></tr></table><h2>Date of birth:</h2><p>Score: <b>19.0 of 20<b></p><p>Levenshtein distance: <b>2<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>02.03.1923</td><td>02.03.1932</td><td>2</td></tr></table><h2>Place of birth:</h2><p>Score: <b>10.0 of 10<b></p><p>Mean Levenshtein ratio: <b>1.0 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'München', 'normalized': 'munchen'}</td><td>{'original': 'München', 'normalized': 'munchen'}</td><td>1.0 (1.0)</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "local_test_data = {\n",
+    "    'forenames': 'Margarethe, Margarete',\n",
+    "    'surnames': 'Abeles, Lewy',\n",
+    "    'birth_place': 'München',\n",
+    "    'birth_date': '02.03.1923',\n",
+    "    'death_place': 'Dachau',\n",
+    "    'death_date': '11.12.1941',\n",
+    "}\n",
+    "\n",
+    "external_test_data = {\n",
+    "    'forenames': 'Margarete',\n",
+    "    'surnames': 'Glaessner, Glässner, Loewy',\n",
+    "    'birth_place': 'München / Bavaria',\n",
+    "    'birth_date': '02.03.1932',\n",
+    "   #'death_place': 'Dachau',\n",
+    "   # 'death_date': '11.11.1941',\n",
+    "}\n",
+    "\n",
+    "result = get_matching_score(local_test_data, external_test_data)\n",
+    "\n",
     "output_html = get_results_as_html(result)\n",
     "\n",
     "display(HTML(output_html))"
@@ -98,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a989cfe0",
+   "id": "59daa1ef-c38c-46c9-889e-99f85083cc3f",
    "metadata": {},
    "outputs": [],
    "source": []
