--- a/Automatic Matching Examples.ipynb
+++ b/Automatic Matching Examples.ipynb
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3ba4b26c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h1>Total Score: <b style=\"padding:4px; color: white; border-radius:4px;background-color: green;\">68.0625</b> Automatically matched</h1><p>Minimum score for automatching: 60</p><h2>Forename:</h2><p>Score: <b>25.0 of 25<b></p><p>Mean Levenshtein ratio: <b>1.0 (0.9473684210526316)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Margarethe', 'normalized': 'margarete'}</td><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>1.0 (0.9473684210526316)</td></tr></table><h2>Surname:</h2><p>Score: <b>14.0625 of 25<b></p><p>Mean Levenshtein ratio: <b>0.75 (0.8888888888888888)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.75 (0.8888888888888888)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.19999999999999996 (0.18181818181818177)</td></tr></table><h2>Date of birth:</h2><p>Score: <b>19.0 of 20<b></p><p>Levenshtein distance: <b>2<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>02.03.1923</td><td>02.03.1932</td><td>2</td></tr></table><h2>Place of birth:</h2><p>Score: <b>10.0 of 10<b></p><p>Mean Levenshtein ratio: <b>1.0 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'München', 'normalized': 'munchen'}</td><td>{'original': 'München', 'normalized': 'munchen'}</td><td>1.0 (1.0)</td></tr></table>"
+       "<h1>Total Score: <b style=\"padding:4px; color: white; border-radius:4px;background-color: red;\">53.012174714841876</b></h1><p>Minimum score for automatching: 60</p><h2>Forename:</h2><p>Score: <b>25.0 of 25<b></p><p>Mean Levenshtein ratio: <b>1.0 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Margarethe', 'normalized': 'margarete'}</td><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>1.0 (0.9473684210526316)</td></tr><tr><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>1.0 (1.0)</td></tr><tr><td>{'original': 'Margarethe', 'normalized': 'margarete'}</td><td>{'original': 'Grete', 'normalized': 'grete'}</td><td>0.7142857142857143 (0.5333333333333333)</td></tr><tr><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>{'original': 'Grete', 'normalized': 'grete'}</td><td>0.7142857142857143 (0.5714285714285714)</td></tr></table><h2>Surname:</h2><p>Score: <b>8.012174714841883 of 25<b></p><p>Mean Levenshtein ratio: <b>0.5661157024793388 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>1.0 (1.0)</td></tr><tr><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>0.75 (0.8888888888888888)</td></tr><tr><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>0.36363636363636365 (0.15384615384615385)</td></tr><tr><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>0.36363636363636365 (0.16666666666666663)</td></tr><tr><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>0.3076923076923077 (0.4)</td></tr><tr><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>0.3076923076923077 (0.2857142857142857)</td></tr><tr><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>0.19999999999999996 (0.18181818181818177)</td></tr><tr><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.18181818181818177 (0.1428571428571429)</td></tr><tr><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.18181818181818177 (0.15384615384615385)</td></tr></table><h2>Date of birth:</h2><p>Score: <b>20 of 20<b></p><p>Levenshtein distance: <b>0<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>09.09.1898</td><td>09.09.1898</td><td>0</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -73,19 +73,19 @@
     "\n",
     "local_test_data = {\n",
     "    'forenames': 'Margarethe, Margarete',\n",
-    "    'surnames': 'Abeles, Lewy',\n",
-    "    'birth_place': 'München',\n",
-    "    'birth_date': '02.03.1923',\n",
-    "    'death_place': 'Dachau',\n",
-    "    'death_date': '11.12.1941',\n",
+    "    'surnames': 'Glaessner, Glässner, Loewy',\n",
+    "    #'birth_place': 'München',\n",
+    "    'birth_date': '09.09.1898',\n",
+    "    #'death_place': 'Dachau',\n",
+    "    #'death_date': '11.12.1941',\n",
     "}\n",
     "\n",
     "external_test_data = {\n",
-    "    'forenames': 'Margarete',\n",
-    "    'surnames': 'Loewy',\n",
+    "    'forenames': 'Grete, Margarete',\n",
+    "    'surnames': 'Abeles, Lewy, Loewy',\n",
     "    'birth_place': 'München / Bavaria',\n",
-    "    'birth_date': '02.03.1932',\n",
-    "   #'death_place': 'Dachau',\n",
+    "    'birth_date': '09.09.1898',\n",
+    "    'death_place': 'Auschwitz',\n",
     "   # 'death_date': '11.11.1941',\n",
     "}\n",
     "\n",
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e1cae111-07a9-4abe-8b64-faff30188b5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h1>Total Score: <b style=\"padding:4px; color: white; border-radius:4px;background-color: red;\">35.991956360946745</b></h1><p>Minimum score for automatching: 60</p><h2>Forename:</h2><p>Score: <b>25.0 of 25<b></p><p>Mean Levenshtein ratio: <b>1.0 (0.9473684210526316)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Margarethe', 'normalized': 'margarete'}</td><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>1.0 (0.9473684210526316)</td></tr></table><h2>Surname:</h2><p>Score: <b>6.991956360946745 of 25<b></p><p>Mean Levenshtein ratio: <b>0.5288461538461539 (0.6444444444444444)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.75 (0.8888888888888888)</td></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>0.36363636363636365 (0.15384615384615385)</td></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>0.36363636363636365 (0.16666666666666663)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>0.3076923076923077 (0.4)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>0.3076923076923077 (0.2857142857142857)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.19999999999999996 (0.18181818181818177)</td></tr></table><h2>Date of birth:</h2><p>Score: <b>19.0 of 20<b></p><p>Levenshtein distance: <b>2<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>02.03.1923</td><td>02.03.1932</td><td>2</td></tr></table><h2>Place of birth:</h2><p>Score: <b>10.0 of 10<b></p><p>Mean Levenshtein ratio: <b>1.0 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'München', 'normalized': 'munchen'}</td><td>{'original': 'München', 'normalized': 'munchen'}</td><td>1.0 (1.0)</td></tr></table>"
+       "<h1>Total Score: <b style=\"padding:4px; color: white; border-radius:4px;background-color: red;\">31.69923998333611</b></h1><p>Minimum score for automatching: 60</p><h2>Forename:</h2><p>Score: <b>25.0 of 25<b></p><p>Mean Levenshtein ratio: <b>1.0 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Margarethe', 'normalized': 'margarete'}</td><td>{'original': 'Margarete', 'normalized': 'margarete'}</td><td>1.0 (0.9473684210526316)</td></tr></table><h2>Surname:</h2><p>Score: <b>2.6992399833361054 of 25<b></p><p>Mean Levenshtein ratio: <b>0.3285872781065089 (0.4750617283950617)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.75 (0.8888888888888888)</td></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>0.36363636363636365 (0.15384615384615385)</td></tr><tr><td>{'original': 'Lewy', 'normalized': 'levi'}</td><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>0.36363636363636365 (0.16666666666666663)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Glaessner', 'normalized': 'glasner'}</td><td>0.3076923076923077 (0.4)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Glässner', 'normalized': 'glasner'}</td><td>0.3076923076923077 (0.2857142857142857)</td></tr><tr><td>{'original': 'Abeles', 'normalized': 'abeles'}</td><td>{'original': 'Loewy', 'normalized': 'lovi'}</td><td>0.19999999999999996 (0.18181818181818177)</td></tr></table><h2>Date of birth:</h2><p>Score: <b>19.0 of 20<b></p><p>Levenshtein distance: <b>2<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>02.03.1923</td><td>02.03.1932</td><td>2</td></tr></table><h2>Place of birth:</h2><p>Score: <b>10.0 of 10<b></p><p>Mean Levenshtein ratio: <b>1.0 (1.0)<b></p><table><tr><th>Local value</th><th>External value</th><th>Levenshtein ratio</th></tr><tr><td>{'original': 'München', 'normalized': 'munchen'}</td><td>{'original': 'München', 'normalized': 'munchen'}</td><td>1.0 (1.0)</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
